[package]
name = "block-vision-client"
version = "0.1.0"
edition = "2024"
description = "A high-performance, type-safe Rust client for the BlockVision API, providing seamless access to blockchain data for Sui and Monad networks"
license = "Apache-2.0"
repository = "https://github.com/kaisxz/block-vision-client"
readme = "README.md"
authors = ["kaisxz <kaisxz@github.com>"]
keywords = ["blockchain", "sui", "monad", "api", "client", "block-vision"]

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
http = "1.3.1"
http-serde = "2.1.1"
serde_json = "1.0.140"
tokio-tungstenite = "0.27.0"
thiserror = "2.0.12"
secrecy = "0.10.3"
url = "2.5.4"
async-trait = "0.1.88"

[features]
default = ["sui", "monad"]
sui = []
monad = []
